[package]
name = "baatein-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
axum = "0.7.5"
mongodb = "2.8.2"
serde = "1.0.198"
tokio = "1.37.0"
tower-http = {version = "0.5.2", features=["full"]}
